added switch to genre filter for switching between Tv and Movies

--- a/movie-man-view/src/components/Filter.css
+++ b/movie-man-view/src/components/Filter.css
@@ -12,6 +12,64 @@
     color: #f5c518; /* Optional: Highlight color */
 }
 
+.filter-header {
+    display: flex;
+    justify-content: center; /* Centering the content horizontally */
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.switch-container {
+    display: flex;
+    align-items: center;
+    margin-left: 20px; /* Adjust if needed */
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    border-radius: 50%;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:checked + .slider:before {
+    transform: translateX(26px);
+}
+
 /* Genre dropdown styling */
 .filter-container select {
     padding: 10px;
@@ -64,6 +122,12 @@
 
 /* Movie title styling */
 .movie-card h3 {
+    color: #ffffff;
+    font-size: 1.2em;
+    margin: 10px 0;
+}
+
+.movie-card h2 {
     color: #ffffff;
     font-size: 1.2em;
     margin: 10px 0;
