--- a/movie-man-view/src/components/pages/TVShows.css
+++ b/movie-man-view/src/components/pages/TVShows.css
@@ -65,3 +65,11 @@
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+
+.tv-title h2{
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #f5c518; /* Optional: Highlight color */
+    text-align: center;
+}
