fixed descriptions not showing on Movies Modal and infinite page on trending page, refactored project structure

--- a/movie-man-view/src/App.css
+++ b/movie-man-view/src/App.css
@@ -8,6 +8,7 @@
     text-align: center;
     background: linear-gradient(to bottom, rgb(100, 0, 128) 0.0001%, #000000 25%);
     min-height: 100vh;
+    position:sticky;
 }
 .navbar {
     position: fixed;
