--- a/movie-man-view/src/components/css/MoviesList.css
+++ b/movie-man-view/src/components/css/MoviesList.css
@@ -62,15 +62,15 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
+    background-color: Black; /* Semi-transparent background */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .movie-modal-content {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: Black;
+    padding: 0px;
+    border-radius: 0px;
+    box-shadow: 0 2px 4px rgba(2, 44, 0, 0.1);
 }
