added reccommended section on movie/tv modal

--- a/movie-man-view/src/components/css/TVShows.css
+++ b/movie-man-view/src/components/css/TVShows.css
@@ -73,3 +73,9 @@
     color: #f5c518; /* Optional: Highlight color */
     text-align: center;
 }
+h2{
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #f5c518; /* Optional: Highlight color */
+    text-align: center;
+}
