--- a/movie-man-view/src/App.css
+++ b/movie-man-view/src/App.css
@@ -1,15 +1,36 @@
-.App {
+/* src/App.css */
+body {
     margin: 0;
     padding: 0;
-    height: 100%; /* Ensure body and html elements take up the full height */
+    background-color: black; /* Solid black background for the entire page */
 }
 
 .App {
     text-align: center;
-    background: linear-gradient(to bottom, rgb(100, 0, 128) 0.0001%, #000000 25%);
     min-height: 100vh;
-    position:sticky;
+    position: relative;
 }
+
+.App::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 300px; /* Adjust the height as needed */
+    background: linear-gradient(to bottom, rgb(100, 0, 128), #000000);
+    z-index: -1; /* Ensure it is behind other content */
+    transition: opacity 0.45s ease, transform 0.45s ease;
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.App.scrolled::before {
+    transition: opacity 0.45s ease, transform 0.45s ease;
+    opacity: 0;
+    transform: translateY(0);
+}
+
 .navbar {
     position: fixed;
     top: 0;
@@ -28,7 +49,6 @@
     justify-content: space-between;
     align-items: center;
     transition: transform 0.3s ease, opacity 0.3s ease;
-
 }
 
 .navbar.hidden {
@@ -83,11 +103,11 @@
 
 .search-bar:focus {
     width: 50%;
-    border-color: #888;
+    border-color: #000000;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 body, .main-content {
     padding-top: 70px;
-    background: rgb(100, 0, 128);
+    background: rgb(0, 0, 0);
 }
