--- a/movie-man-view/src/components/css/Modal.css
+++ b/movie-man-view/src/components/css/Modal.css
@@ -1,6 +1,8 @@
 /* src/components/css/Modal.css */
 .ReactModal__Overlay {
     background-color: rgba(0, 0, 0, 0.7) !important;
+    z-index: 2000; /* Ensure modal overlay is above NavBar */
+
 }
 
 .ReactModal__Content {
@@ -8,7 +10,8 @@
     color: #ffffff !important;
     border-radius: 10px;
     padding: 20px;
-    max-width: 800px;
+    max-width: 1200px;
+    max-height: 900px;
     margin: auto;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
