--- a/movie-man-view/src/components/css/TVShows.css
+++ b/movie-man-view/src/components/css/TVShows.css
@@ -1,6 +1,6 @@
 /* src/TVShowsList.css */
 
-.tvshows-container {
+.tv-container {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -8,21 +8,20 @@
     justify-content: center;
 }
 
-.tvshow-card {
-    background-color: #2f0463;
+.tv-card {
+    position: relative; /* Ensure the delete button is positioned relative to the card */
     border-radius: 15px;
     padding: 20px;
     width: 200px;
     text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s;
 }
 
-.tvshow-card:hover {
+.tv-card:hover {
     transform: scale(1.05);
 }
 
-.tvshow-poster {
+.tv-poster {
     background-color: #2f0463;
     border-radius: 15px;
     height: 300px;
@@ -30,24 +29,24 @@
     overflow: hidden; /* Ensures the image is clipped to the border radius */
 }
 
-.tvshow-poster img {
+.tv-poster img {
     width: 100%;
     height: 100%;
     object-fit: cover; /* Ensures the image covers the area without distortion */
 }
 
-.tvshow-details h2 {
+.tv-details h2 {
     margin: 10px 0;
     font-size: 1.2em;
 }
 
-.tvshow-details {
+.tv-details {
     margin: 5px 0;
     color: #ffffff;
 }
 
 /* Example styles for the overlay (same as movies) */
-.tvshow-modal-overlay {
+.tv-modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -59,7 +58,7 @@
     align-items: center;
 }
 
-.tvshow-modal-content {
+.tv-modal-content {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
@@ -78,4 +77,44 @@ h2{
     margin-bottom: 20px;
     color: #f5c518; /* Optional: Highlight color */
     text-align: center;
+}
+.recently-watched-tv {
+    margin: 20px 0;
+}
+
+.carousel-tv {
+    display: flex;
+    overflow-x: auto;
+    overflow-y: hidden; /* Hide vertical scrollbar */
+    gap: 10px;
+    scroll-snap-type: x mandatory; /* Optional: for snapping effect */
+    position: relative; /* Ensure it captures scroll events */
+}
+
+.carousel-tv::-webkit-scrollbar {
+    display: none; /* Hide scrollbar for WebKit browsers */
+}
+
+.carousel-tv .tv-card {
+    flex: 0 0 auto;
+    width: 150px;
+    scroll-snap-align: start; /* Optional: for snapping effect */
+    position: relative;
+}
+
+.delete-button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    z-index: 10; /* Higher z-index on hover */
 }
