--- a/movie-man-view/src/index.css
+++ b/movie-man-view/src/index.css
@@ -8,6 +8,5 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Cinzel', source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
