--- a/movie-man-view/src/components/css/MoviesList.css
+++ b/movie-man-view/src/components/css/MoviesList.css
@@ -9,8 +9,8 @@
 .movie-card {
     position: relative; /* Ensure the delete button is positioned relative to the card */
     border-radius: 15px;
-    padding: 20px;
-    width: 200px;
+    padding: 40px;
+    width: 300px;
     text-align: center;
     transition: transform 0.2s;
 }
@@ -119,7 +119,8 @@
 }
 
 .carousel-tv {
-    padding:20px;
+
+    padding:60px;
     display: flex;
     overflow-x: auto;
     overflow-y: hidden; /* Hide vertical scrollbar */
@@ -137,4 +138,51 @@
 }
 .recently-watched{
     color:#f5c518;
+}
+.movie-card {
+    position: relative;
+    border-radius: 15px;
+    padding: 40px;
+    width: 300px;
+    text-align: center;
+    transition: transform 0.2s;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Ensure the rating stays at the bottom */
+}
+
+.movie-details {
+    flex-grow: 1; /* Take up remaining space */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Ensure the rating stays at the bottom */
+}
+
+.movie-title {
+    font-size: 1.2em;
+    margin-bottom: 0.5em;
+    text-align: center;
+}
+
+.movie-rating {
+    font-size: 1em;
+    color: #888;
+    text-align: center;
+    margin-top: auto; /* Push the rating to the bottom */
+}
+
+.star-rating {
+    display: flex;
+    justify-content: center;
+    margin-top: 5px;
+}
+
+.star {
+    font-size: 1.2em;
+    color: #ccc;
+    margin: 0 2px;
+}
+
+.star.filled {
+    color: #f5c518;
 }
