--- a/movie-man-view/src/index.css
+++ b/movie-man-view/src/index.css
@@ -10,3 +10,22 @@ body {
 code {
   font-family: 'Cinzel', source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+/* Scrollbar styling for WebKit browsers */
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #2e2e2e;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 10px;
+  border: 3px solid #2e2e2e;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #777;
+}
