--- a/movie-man-view/src/components/css/MoviesList.css
+++ b/movie-man-view/src/components/css/MoviesList.css
@@ -143,7 +143,7 @@
 
 .movie-card.delete-mode:hover {
     transform: scale(1.05);
-    background-color: rgba(131, 1, 159, 0.42); /* Slightly darker background */
+    background-color: rgba(253, 3, 54, 0.42); /* Slightly darker background */
 }
 
 .movie-card.selected {
@@ -233,4 +233,13 @@
 
 .star.filled {
     color: #f5c518;
+}
+.select-all-button,.delete-mode-button, .confirm-delete-button, .cancel-delete-button {
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    margin: 10px;
+    cursor: pointer;
+    border-radius: 5px;
 }
