--- a/movie-man-view/src/components/css/MoviesList.css
+++ b/movie-man-view/src/components/css/MoviesList.css
@@ -6,6 +6,7 @@
     justify-content: center;
 }
 
+
 .movie-card {
     position: relative; /* Ensure the delete button is positioned relative to the card */
     border-radius: 15px;
@@ -39,6 +40,14 @@
     color: #f5c518; /* Optional: Highlight color */
     text-align: center;
 }
+
+.action-movies h2{
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #f5c518; /* Optional: Highlight color */
+    text-align: center;
+}
+
 
 .movie-card:hover {
     transform: scale(1.05);
@@ -125,6 +134,24 @@
     position: relative; /* Ensure it captures scroll events */
     z-index: 10;
     background-color: rgba(237, 235, 235, 0.11); /* Grey translucent background */
+}
+
+.section-carousel {
+    padding: 20px;
+    border-radius: 60px;
+    margin-left: 35px;
+    margin-right: 35px;
+    display: flex;
+    overflow-x: auto;
+    overflow-y: hidden; /* Hide vertical scrollbar */
+    gap: 10px;
+    position: relative; /* Ensure it captures scroll events */
+    z-index: 10;
+    /*background: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 0.8));*/
+}
+.section-carousel .movie-card {
+    flex: 0 0 auto;
+    width: 150px;
 }
 
 .delete-mode-button, .confirm-delete-button {
